# fixed-point-calculator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yaml
